# tews_circuit

./: .gitignore  Cargo.toml  README.md  TODO.md  challenge.py  challenges.db  circuit.py  database.py  db.sql  import interactions2.py  main.py  modals.py  player.py  pyproject.toml  rank.py  requirements.txt  useful.sql  views.py
cogs/: booking.py  challenge.py  utils.py
database/: challenge.py  utils.py
forms/: __init__.py  cancel_match.py  challenge_submission.py  finish_match.py
player/: player.py  rank.py
sql/: dummy-challenges.sql  insert_ranks.sql
src/: challenge.rs  constants.rs  db.rs  errors.rs  examples.rs  main.rs  player.rs  rank.rs  utils.rs
src/battle/: challenge.rs  mod.rs  start_match.rs
src/history/: mod.rs  pending_matches.rs
src/player/: mod.rs  player.rs  rank.rs
