[package]
name = "tews_circuit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
poise = { version = "0.5.5" }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite", "chrono" ] }

# Async stuff
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "time"] }
futures = "0.3.28"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-recursion = "1.0.4"
